--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,2 +1,6 @@
 @import "reset";
 @import "posts";
+@import "font-awesome-sprockets";
+@import "./font-awesome";
+@import "./side_bar";
+@import "./main_post"
