--- a/app/views/posts/index.html.haml
+++ b/app/views/posts/index.html.haml
@@ -1,20 +1,3 @@
-%p#notice= notice
-%h1 Posts
-%table
-  %thead
-    %tr
-      %th Name
-      %th Text
-      %th Image
-      %th{:colspan => "3"}
-  %tbody
-    - @posts.each do |post|
-      %tr
-        %td= post.name
-        %td= post.text
-        %td= post.image
-        %td= link_to 'Show', post
-        %td= link_to 'Edit', edit_post_path(post)
-        %td= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' }
-%br/
-= link_to 'New Post', new_post_path
+.wrapper
+  = render "side_bar"
+  = render "main_post"
