--- a/app/assets/stylesheets/main_post.scss
+++ b/app/assets/stylesheets/main_post.scss
@@ -1,84 +1,155 @@
-body {
-  background-color: #fff;
-  color: #333;
-  margin: 33px;
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+* {
+  box-sizing: border-box;
 }
-
-p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+.header{
+  width: 100%;
+  height: 100px;
+  background-color: black;
+  font-size: xx-large;
+  color: white;
 }
-
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
-}
-
-a {
-  color: #000;
-
-  &:visited {
-    color: #666;
+.container{
+  display: flex;
+  .side-bar{
+    background-color: black;
+    width: 200px;
+    height: 100vh;
+    float: left;
+    margin-left: 0px;
+    &__keyword{
+      font-size: large;
+      color: white;
+      &__lists{
+        line-height: 1;
+        .list{
+          border: solid 1px gray;
+        }
+      }
+    }
+    &__itemSearch{
+      font-size: large;
+      color: white;
+      &__lists{
+        line-height: 1;
+        .list{
+          border: solid 1px gray;
+        }
+      }
+    }
+    &__category{
+      font-size: large;
+      color: white;
+      &__lists{
+        &__ladies{
+          font-size: medium;
+          color: white;
+          display: block;
+          background: url() no-repeat0px 15px;
+          &__lists{
+            display: block;
+            .list{
+              border: solid 1px gray;
+              display: list-item;
+            }
+          }
+        }
+      }
+    }
   }
 
-  &:hover {
-    color: #fff;
-    background-color: #000;
+  .main-post{
+    width: calc(100%-200px);
+    height: calc(100vh-100px);
+    body {
+      background-color: #fff;
+      color: #333;
+      margin: 33px;
+      font-family: verdana, arial, helvetica, sans-serif;
+      font-size: 13px;
+      line-height: 18px;
+      margin: 0;
+      padding: 0;
+    }
+    
+    p, ol, ul, td {
+      font-family: verdana, arial, helvetica, sans-serif;
+      font-size: 13px;
+      line-height: 18px;
+    }
+    
+    pre {
+      background-color: #eee;
+      padding: 10px;
+      font-size: 11px;
+    }
+    
+    a {
+      color: #000;
+    
+      &:visited {
+        color: #666;
+      }
+    
+      &:hover {
+        color: #fff;
+        background-color: #000;
+      }
+    }
+    
+    th {
+      padding-bottom: 5px;
+    }
+    
+    td {
+      padding: 0 5px 7px;
+    }
+    
+    div {
+      &.field, &.actions {
+        margin-bottom: 10px;
+      }
+    }
+    
+    #notice {
+      color: green;
+    }
+    
+    .field_with_errors {
+      padding: 2px;
+      background-color: red;
+      display: table;
+    }
+    
+    #error_explanation {
+      width: 450px;
+      border: 2px solid red;
+      padding: 7px 7px 0;
+      margin-bottom: 20px;
+      background-color: #f0f0f0;
+    
+      h2 {
+        text-align: left;
+        font-weight: bold;
+        padding: 5px 5px 5px 15px;
+        font-size: 12px;
+        margin: -7px -7px 0;
+        background-color: #c00;
+        color: #fff;
+      }
+    
+      ul li {
+        font-size: 12px;
+        list-style: square;
+      }
+    }
+    
+    label {
+      display: block;
+    }
+    
   }
+  
 }
-
-th {
-  padding-bottom: 5px;
-}
-
-td {
-  padding: 0 5px 7px;
-}
-
-div {
-  &.field, &.actions {
-    margin-bottom: 10px;
-  }
-}
-
-#notice {
-  color: green;
-}
-
-.field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
-}
-
-#error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px 7px 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-
-  h2 {
-    text-align: left;
-    font-weight: bold;
-    padding: 5px 5px 5px 15px;
-    font-size: 12px;
-    margin: -7px -7px 0;
-    background-color: #c00;
-    color: #fff;
-  }
-
-  ul li {
-    font-size: 12px;
-    list-style: square;
-  }
-}
-
-label {
-  display: block;
-}
+  
+  
+  
